--- a/src/widgets/credit/ui/Credit.module.scss
+++ b/src/widgets/credit/ui/Credit.module.scss
@@ -1,5 +1,5 @@
-@use '../../../shared/styles/variables' as *;
-@use '../../../shared/styles/mixins' as *;
+@use "../../../shared/styles/variables" as *;
+@use "../../../shared/styles/mixins" as *;
 
 .credit {
 	position: relative;
@@ -95,7 +95,6 @@
 	}
 }
 
-
 .form {
 	@include mobile {
 		width: 100%;
@@ -151,5 +150,4 @@
 			padding-left: 4px;
 		}
 	}
-
 }
