--- a/src/shared/styles/mixins.scss
+++ b/src/shared/styles/mixins.scss
@@ -1,11 +1,9 @@
-@use './variables' as *;
+@use "./variables" as *;
 
 @mixin swiperPagination {
-
 }
 
 @mixin swiperButtons {
-
 }
 
 // адаптив
@@ -36,5 +34,3 @@
 		@content;
 	}
 }
-
-
