--- a/src/shared/ui/button/Button.module.scss
+++ b/src/shared/ui/button/Button.module.scss
@@ -1,122 +1,123 @@
-@use '../../../shared/styles/variables' as *;
-@use '../../../shared/styles/mixins' as *;
+@use "../../../shared/styles/variables" as *;
+@use "../../../shared/styles/mixins" as *;
 
 .btn {
-    font-size: 14px;
-    line-height: 100%;
-    font-weight: 400;
-    height: 43px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 12px;
-    text-transform: uppercase;
-    border: none;
-    cursor: pointer;
-    transition: all 0.3s ease;
+	font-size: 14px;
+	line-height: 100%;
+	font-weight: 400;
+	height: 43px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0 12px;
+	text-transform: uppercase;
+	border: none;
+	cursor: pointer;
+	transition: all 0.3s ease;
 
-    background: none;
+	background: none;
 
-    @include mobile {
-        width: 100%;
-        padding: 15px;
-    }
+	@include mobile {
+		width: 100%;
+		padding: 15px;
+	}
 
-    &[data-min-width] {
-        min-width: attr(data-min-width px);
-    }
+	&[data-min-width] {
+		min-width: attr(data-min-width px);
+	}
 }
 
 .primary {
-    color: $color-light;
-    background-color: $color-primary;
+	color: $color-light;
+	background-color: $color-primary;
 
-    &:not(.btnArrowWrap):hover {
-        background-color: $color-dark;
-    }
+	&:not(.btnArrowWrap):hover {
+		background-color: $color-dark;
+	}
 }
 
 .secondary {
-    border: 1px solid $color-dark;
-    background-color: $color-light;
+	border: 1px solid $color-dark;
+	background-color: $color-light;
 
-    &:not(.btnArrowWrap):hover {
-        background-color: $color-dark;
-        color: $color-light;
-    }
+	&:not(.btnArrowWrap):hover {
+		background-color: $color-dark;
+		color: $color-light;
+	}
 }
 
 .outline {
-    background-color: $color-light;
+	background-color: $color-light;
 	height: fit-content;
 
-    &:not(.btnArrowWrap):hover {
-        color: $color-primary;
-    }
+	&:not(.btnArrowWrap):hover {
+		color: $color-primary;
+	}
 }
 
 .btnArrowIcons {
-    position: relative;
-    padding-right: 30px;
-    white-space: nowrap;
-    transition: all 0.3s ease;
-    display: flex;
-    align-items: center;
-    width: 100%;
+	position: relative;
+	padding-right: 30px;
+	white-space: nowrap;
+	transition: all 0.3s ease;
+	display: flex;
+	align-items: center;
+	width: 100%;
 
-    @include mobile {
-        padding-right: 25px;
-    }
+	@include mobile {
+		padding-right: 25px;
+	}
 
-    .arrowLeft,
-    .arrowRight {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 18px;
-        height: 18px;
-        transition: opacity 0.3s ease, transform 0.3s ease;
-    }
+	.arrowLeft,
+	.arrowRight {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		width: 18px;
+		height: 18px;
+		transition:
+			opacity 0.3s ease,
+			transform 0.3s ease;
+	}
 
-    .arrowRight {
-        right: 0;
-        opacity: 1;
-    }
+	.arrowRight {
+		right: 0;
+		opacity: 1;
+	}
 
-    .arrowLeft {
-        left: 0;
-        opacity: 0;
-        transform: translateY(-50%) translateX(-12px);
-    }
+	.arrowLeft {
+		left: 0;
+		opacity: 0;
+		transform: translateY(-50%) translateX(-12px);
+	}
 
-    .btnText {
-        transition: all 0.3s ease;
-        position: absolute;
-        left: 0; 
-    }
+	.btnText {
+		transition: all 0.3s ease;
+		position: absolute;
+		left: 0;
+	}
 
-    .btnArrowWrap:hover & {
-        padding-right: 0;
-        padding-left: 30px;
+	.btnArrowWrap:hover & {
+		padding-right: 0;
+		padding-left: 30px;
 
-        @include mobile {
-            padding-left: 25px;
-        }
-    }
+		@include mobile {
+			padding-left: 25px;
+		}
+	}
 
-    .btnArrowWrap:hover & .btnText {
-        left: auto;
-        right: 0; 
-    }
+	.btnArrowWrap:hover & .btnText {
+		left: auto;
+		right: 0;
+	}
 
-    .btnArrowWrap:hover & .arrowRight {
-        opacity: 0;
-        transform: translateY(-50%) translateX(12px);
-    }
+	.btnArrowWrap:hover & .arrowRight {
+		opacity: 0;
+		transform: translateY(-50%) translateX(12px);
+	}
 
-    .btnArrowWrap:hover & .arrowLeft {
-        opacity: 1;
-        transform: translateY(-50%) translateX(0);
-    }
+	.btnArrowWrap:hover & .arrowLeft {
+		opacity: 1;
+		transform: translateY(-50%) translateX(0);
+	}
 }
-
