--- a/src/widgets/footer/ui/Footer.module.scss
+++ b/src/widgets/footer/ui/Footer.module.scss
@@ -1,5 +1,5 @@
-@use '../../../shared/styles/variables' as *;
-@use '../../../shared/styles/mixins' as *;
+@use "../../../shared/styles/variables" as *;
+@use "../../../shared/styles/mixins" as *;
 
 .footer {
 	background-color: $color-bg;
@@ -44,10 +44,18 @@
 			padding-top: 20px;
 			padding-bottom: 30px;
 
-			> div:nth-child(1) { order: 1; }
-			> div:nth-child(2) { order: 3; }
-			> div:nth-child(3) { order: 4; }
-			> div:nth-child(4) { order: 2; }
+			> div:nth-child(1) {
+				order: 1;
+			}
+			> div:nth-child(2) {
+				order: 3;
+			}
+			> div:nth-child(3) {
+				order: 4;
+			}
+			> div:nth-child(4) {
+				order: 2;
+			}
 		}
 
 		.form {
