--- a/src/widgets/modals/ui/Modals.module.scss
+++ b/src/widgets/modals/ui/Modals.module.scss
@@ -1,5 +1,5 @@
-@use '../../../shared/styles/variables' as *;
-@use '../../../shared/styles/mixins' as *;
+@use "../../../shared/styles/variables" as *;
+@use "../../../shared/styles/mixins" as *;
 
 .modalOverlay {
 	position: fixed;
@@ -57,7 +57,6 @@
 	}
 }
 
-
 .form {
 	display: flex;
 	flex-direction: column;
@@ -108,7 +107,6 @@
 			padding-left: 4px;
 		}
 	}
-
 }
 
 .title {
@@ -119,7 +117,7 @@
 	padding: 0;
 	font-weight: 400;
 
-	@include  mobile {
+	@include mobile {
 		font-size: 24px;
 		line-height: 100%;
 	}
