--- a/src/shared/styles/mixins.scss
+++ b/src/shared/styles/mixins.scss
@@ -38,3 +38,27 @@
 }
 
 
+@mixin fadeInCard {
+	animation: fadeInUp 0.5s ease forwards;
+	opacity: 0;
+
+	// Последовательное появление карточек
+	@for $i from 1 through 10 {
+		&:nth-child(#{$i}) {
+			animation-delay: #{$i * 0.1}s;
+		}
+	}
+}
+
+@keyframes fadeInUp {
+	from {
+		opacity: 0;
+		transform: translateY(20px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+
