--- a/src/widgets/equipments/ui/Equipments.module.scss
+++ b/src/widgets/equipments/ui/Equipments.module.scss
@@ -40,6 +40,8 @@
 	.cardWrap {
 
 		.card {
+			@include fadeInCard;
+
 			display: grid;
 			grid-template-columns: repeat(2, 1fr);
 			align-items: center;
@@ -56,16 +58,6 @@
 				padding: 10px;
 				margin-left: 10px;
 				margin-right: 10px;
-			}
-
-			animation: fadeInUp 0.5s ease forwards;
-			opacity: 0;
-
-			// Последовательное появление карточек
-			@for $i from 1 through 10 {
-				&:nth-child(#{$i}) {
-					animation-delay: #{$i * 0.1}s;
-				}
 			}
 
 			&:not(:last-child) {
@@ -157,17 +149,6 @@
 				}
 			}
 		}
-	}
-}
-
-@keyframes fadeInUp {
-	from {
-		opacity: 0;
-		transform: translateY(20px);
-	}
-	to {
-		opacity: 1;
-		transform: translateY(0);
 	}
 }
 
