--- a/src/widgets/stock/ui/StockModels.module.scss
+++ b/src/widgets/stock/ui/StockModels.module.scss
@@ -44,12 +44,20 @@
 				width: 100%;
 				aspect-ratio: 16 / 9;
 
-				.label {
+				.labelNew {
 					position: absolute;
 					top: 0;
 					left: 0;
 					background-color: $color-primary;
 					color: $color-light;
+					padding: 4px 10px;
+					z-index: 1;
+				}
+				.labelOld {
+					position: absolute;
+					top: 0;
+					left: 0;
+					background-color: $color-light-gray;
 					padding: 4px 10px;
 					z-index: 1;
 				}
@@ -112,20 +120,46 @@
 			}
 
 			.infoWrap {
+				.infoTop {
+					display: flex;
+					justify-content: space-between;
+					align-items: center;
+					padding-top: 10px;
+
+					.colorWrap {
+						flex: none;
+						border: 1px solid $color-light-gray;
+						border-radius: 50%;
+						width: 24px;
+						height: 24px;
+						display: flex;
+						align-items: center;
+						justify-content: center;
+
+						.color {
+							flex: none;
+							width: 16px;
+							height: 16px;
+							border-radius: 50%;
+							//box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+						}
+					}
+				}
+
 				.modelTitle {
 					font-size: 24px;
 				}
 
 				.chars {
 					display: flex;
-					gap: 6px;
+					gap: 4px;
 					flex-wrap: wrap;
 
 					> span {
 						border: 1px solid $color-light-gray;
 						padding: 4px 8px;
 						border-radius: 6px;
-						font-size: 14px;
+						font-size: 12px;
 					}
 				}
 
@@ -144,7 +178,73 @@
 						color: $color-light-gray;
 					}
 				}
+
+				.btnWrap {
+					padding-top: 10px;
+
+					button {
+						width: fit-content;
+						padding: 0;
+						text-decoration: underline;
+						color: $color-primary;
+						text-transform: none;
+
+						&:hover {
+							color: $color-dark;
+						}
+					}
+				}
 			}
 		}
+	}
+}
+
+.filters {
+	display: flex;
+	gap: 10px;
+
+	@include mobile {
+		flex-direction: column;
+		width: 100%;
+		gap: 6px;
+	}
+
+	.select {
+		flex: 1;
+
+		@include mobile {
+			width: 100%;
+			flex: auto;
+		}
+	}
+}
+.filtersInfo {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	column-gap: 40px;
+	padding: 24px 0;
+
+	@include mobile {
+		gap: 10px;
+		padding: 10px 0;
+	}
+
+	.resultsCount {
+		flex: none;
+	}
+
+	.resetButton {
+		width: fit-content;
+	}
+}
+.noResults {
+}
+
+.showMoreWrap {
+	padding-top: 40px;
+
+	> button {
+		margin: auto;
 	}
 }
