--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -13,6 +13,7 @@ html {
 html,
 body {
 	max-width: 100vw;
+	height: 100%;
 	// overflow-x: hidden;
 }
 
@@ -116,5 +117,15 @@ input:focus {
 .tablet-hide {
 	@include tablet {
 		display: none !important;
+	}
+}
+
+.other-page {
+	padding-top: 120px;
+	padding-bottom: 100px;
+
+	h1 {
+		font-weight: 700;
+		padding-bottom: 30px;
 	}
 }
