--- a/src/widgets/modals/ui/ReelsModal.module.scss
+++ b/src/widgets/modals/ui/ReelsModal.module.scss
@@ -57,10 +57,9 @@
 	:global(.swiper-wrapper) {
 		display: flex;
 		align-items: center;
-		// Убираем центрирование через justify-content
+		//justify-content: center;
 	}
 
-	// Все слайды по умолчанию - уменьшенные
 	:global(.swiper-slide) {
 		width: 210px !important;
 		height: 373px !important;
@@ -68,17 +67,16 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		//opacity: 0.7;
 		align-self: center !important;
 		flex-shrink: 0; // Важно: запрещаем сжатие слайдов
 		cursor: pointer;
+		//transform-origin: center center;
 	}
 
-	// Активный слайд - полный размер
 	:global(.swiper-slide-active) {
 		width: 300px !important;
 		height: 533px !important;
-		//opacity: 1;
+		//transform: translateX(0) !important;
 	}
 }
 
@@ -87,38 +85,85 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
 
-.videoContainer {
-	position: relative;
-	border-radius: 12px;
-	overflow: hidden;
-	background: #000;
-	box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-	width: 100%;
-	height: 100%;
-	transition: all 0.3s ease;
-}
+	.videoContainer {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		border-radius: 16px;
+		overflow: hidden;
+		box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+		transition: all 0.3s ease;
+		background-color: $color-bg;
 
-.videoContainer video {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	display: block;
-	border-radius: 12px;
-}
+		video {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			display: block;
+		}
 
-.videoTitle {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background: linear-gradient(transparent, rgba(0, 0, 0, 0.8));
-	color: white;
-	padding: 20px 10px 10px;
-	font-size: 14px;
-	text-align: center;
-	font-weight: 500;
+		&::after {
+			content: "";
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			height: 140px;
+			background: linear-gradient(
+				180deg,
+				rgba(0, 0, 0, 0) 0%,
+				rgba(0, 0, 0, 0.61) 50%,
+				#000000 100%
+			);
+			pointer-events: none; // Чтобы не мешал кликам
+			z-index: 1;
+		}
+
+		// дубликат вынести в миксин
+		.videoInfo {
+			.videoIconWrap {
+				height: 30px;
+				width: fit-content;
+				position: absolute;
+				top: 0;
+				padding: 16px 16px 0;
+
+				img {
+					height: 30px;
+					width: auto;
+				}
+			}
+
+			.videoText {
+				color: $color-light;
+				line-height: 100%;
+				font-size: 16px;
+				position: absolute;
+				bottom: 0;
+				padding: 0 16px 16px;
+				z-index: 2;
+
+				.videoTitle {
+					padding-bottom: 4px;
+					font-weight: 600;
+				}
+
+				.videoSubtitle {
+				}
+			}
+		}
+	}
+
+	.play {
+		position: absolute;
+		inset: 0;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		color: $color-light;
+		transition: scale 0.3s ease-in-out;
+	}
 }
 
 /* Навигация */
@@ -187,10 +232,10 @@
 	animation: reelsAppear 0.3s ease-out;
 }
 
-/* Мобильная адаптация */
+/* Мобильная адаптация (сделать как везде внутри эл-тов) */
 @include mobile {
 	.videoSwiper {
-		padding: 0 50px;
+		padding: 0 10px;
 
 		:global(.swiper-slide) {
 			width: 140px !important;
