--- a/src/widgets/actions/ui/Actions.module.scss
+++ b/src/widgets/actions/ui/Actions.module.scss
@@ -3,9 +3,11 @@
 
 .action {
 	padding-top: 120px;
+	margin-bottom: 120px;
 
 	@include mobile {
 		padding-top: 60px;
+		margin-bottom: 60px;
 	}
 
 	.swiperAction {
