--- a/src/widgets/contact/ui/Contacts.module.scss
+++ b/src/widgets/contact/ui/Contacts.module.scss
@@ -2,10 +2,10 @@
 @use "../../../shared/styles/mixins" as *;
 
 .contacts {
-	margin: 120px 0;
+	margin-bottom: 120px;
 
 	@include mobile {
-		margin: 60px 0;
+		margin-bottom: 60px;
 	}
 
 	.contactsTitle {
