--- a/src/widgets/credit/ui/Credit.module.scss
+++ b/src/widgets/credit/ui/Credit.module.scss
@@ -5,6 +5,7 @@
 	position: relative;
 	margin-left: 10%;
 	margin-right: 10%;
+	margin-bottom: 120px;
 
 	@include laptop {
 		margin-left: 4%;
@@ -15,6 +16,7 @@
 		margin-left: 10px;
 		margin-right: 10px;
 		height: 550px;
+		margin-bottom: 60px;
 	}
 
 	.imgWrap {
