--- a/src/widgets/models/ui/Models.module.scss
+++ b/src/widgets/models/ui/Models.module.scss
@@ -10,12 +10,10 @@
 }
 
 .models {
-	margin-top: 120px;
-	padding-bottom: 120px;
+	margin-bottom: 120px;
 
 	@include mobile {
-		margin-top: 60px;
-		padding-bottom: 60px;
+		margin-bottom: 60px;
 	}
 
 	.title {
