--- a/src/widgets/social/ui/Social.module.scss
+++ b/src/widgets/social/ui/Social.module.scss
@@ -6,11 +6,13 @@
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	column-gap: 6px;
+	margin-bottom: 120px;
 
 	@include mobile {
 		grid-template-columns: repeat(1, 1fr);
 		align-items: center;
 		text-align: center;
+		margin-bottom: 60px;
 	}
 
 	.social {
