--- a/src/widgets/testdrive/ui/TestDrive.module.scss
+++ b/src/widgets/testdrive/ui/TestDrive.module.scss
@@ -1,6 +1,7 @@
 @use "../../../shared/styles/variables" as *;
 @use "../../../shared/styles/mixins" as *;
 
+// мобильную версию переделать по макету (когда будет готов)
 .testDrive {
 	margin-bottom: 120px;
 	display: flex;
@@ -10,6 +11,7 @@
 	@include mobile {
 		margin-bottom: 60px;
 		gap: 10px;
+		flex-direction: column;
 	}
 
 	.item {
@@ -22,7 +24,8 @@
 
 		@include mobile {
 			gap: 20px;
-			height: 400px;
+			flex-direction: column;
+			height: auto;
 		}
 
 		.imageWrap {
@@ -30,11 +33,32 @@
 			flex-shrink: 0;
 			transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 
+			@include mobile {
+				height: 200px;
+			}
+
 			.image {
 				width: 100%;
 				height: 100%;
 				object-fit: cover;
 				transition: transform 0.3s ease;
+			}
+
+			.plus {
+				position: absolute;
+				bottom: 10px;
+				right: 10px;
+				background-color: $color-primary;
+				color: $color-light;
+				border-radius: 2px;
+				padding: 10px;
+				opacity: 0.7;
+
+				@include mobile {
+					top: 10px;
+					bottom: auto;
+					opacity: 1;
+				}
 			}
 		}
 
@@ -136,10 +160,6 @@
 			.imageWrap {
 				width: 100%;
 				flex: auto;
-
-				@include mobile {
-					width: 50%;
-				}
 			}
 
 			.info {
@@ -150,7 +170,7 @@
 				visibility: visible;
 
 				@include mobile {
-					max-width: 300px;
+					max-width: 100%;
 				}
 			}
 
@@ -174,14 +194,26 @@
 				transform: translateX(-20px);
 				pointer-events: none;
 				visibility: hidden;
+
+				@include mobile {
+					height: 0;
+					width: 100%;
+				}
 			}
 
-			&:hover .imageWrap .image {
-				transform: scale(1.05);
+			&:hover .imageWrap {
+				.image {
+					transform: scale(1.05);
+				}
+
+				.plus {
+					opacity: 1;
+				}
 			}
 
 			@include mobile {
-				width: 150px;
+				height: 100px;
+				width: 100%;
 			}
 		}
 	}
